--- a/Backend/Printfx/src/main/resources/application.properties
+++ b/Backend/Printfx/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.driver = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/dmg
 spring.datasource.username = root
 spring.datasource.password = 1234
+
+# JPA Settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
