--- a/Backend/Printfx/src/main/resources/application.properties
+++ b/Backend/Printfx/src/main/resources/application.properties
@@ -11,3 +11,12 @@ spring.datasource.password = 1234
 # JPA Settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kollasaiakhil@gmail.com
+spring.mail.password=stlh txaj pbsz mmca
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
