--- a/Frontend/my-printfx/package.json
+++ b/Frontend/my-printfx/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.7",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "node-sass": "^9.0.0",
     "rxjs": "~7.8.0",
